--- a/css/index.scss
+++ b/css/index.scss
@@ -5,9 +5,10 @@
 @import "preloader";
 @import "navbar";
 @import "home";
+@import "soundwave";
 @import "socialnetwork";
 @import "about";
-@import "portfolio";
+@import "works";
 @import "equalizer";
 @import "contact";
 @import "footer";
