--- a/css/_contact.scss
+++ b/css/_contact.scss
@@ -1,27 +1,21 @@
 #contact{
     .title-part{
-        font-size: 2.75rem;
-        font-weight: 900;
-        font-family: 'Nixie One', cursive;
-    }   
-
-    .under-txt{
-        font-size: 1.7rem;
+        font-size: 4.5rem;
+    }
+/*
+    .contact-box{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
     }
 
     .item{
-        margin: auto;
-        width: 212px;
+        margin: 5rem auto;
     }
 
     .contact-link {
         text-align: center;
-        margin-top: 2rem;
-        margin-bottom: 10rem;
-        padding-top: 2rem;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
     }
       
     h3 {
@@ -29,18 +23,18 @@
         cursor: default;
         margin-bottom: 2rem;
         i{
-            color: $violet;
+            color: $bleu;
         }
     }
       
     a {
         text-decoration: none;
         text-align: center;
-        color: black;
+        color: $rouge;
         font-size: 1.8rem;
         cursor: pointer;
         &:hover {
-          color: black;
+          color: white;
         }
     }
 
@@ -50,6 +44,7 @@
       
     .fab {
         font-size: 3rem;
+        color: $rouge;
     }
       
     .fa-facebook {
@@ -76,6 +71,10 @@
     }
       
     @include sm {
+        .contact-box{
+            flex-direction: column;
+            justify-content: center;
+        }
         .contact-link {
           flex-direction: column;
           margin-top: 0.5rem;
@@ -91,8 +90,12 @@
     }
 
     .contact-form{
+        margin: 0 auto;
+        left: 0;
+        right: 0;
+
         .input-group-text{
-            background-color: $violet;
+            background-color: $bleu;
         }
 
         input, textarea{            
@@ -172,6 +175,7 @@
             
             .btn:hover{              
                 background-color: #fff;
+                border: 3px solid $bleu;
             }
               
             .btn:hover i{
@@ -187,7 +191,7 @@
                 position: absolute;
                 left: 0;
                 right: 0;
-                top: 0;
+                top: -3px;
                 bottom: 0;
                 margin: auto;
                 -webkit-transform: translateY(500%) scale(-0.1,20);
@@ -200,6 +204,338 @@
                 -webkit-transform: translateY(0) scale(1,1);
                         transform: translateY(0) scale(1,1);
             }
+        }
+    }*/
+}
+
+
+
+/* Pretty Stuff */
+
+#contact{
+    .contact-form-container {
+        background: #F1ECE6;
+        margin: 5rem auto;
+
+        .contact-me {
+            position: relative;
+            width: 250px;
+            background:#060709 no-repeat center url('../img/mic2.jpg');
+            background-size: 250px auto;
+            overflow: hidden;
+            
+            &::before {
+                position: absolute;
+                content: "";
+                bottom: -50px;
+                left: -100px;
+                height: 180px;
+                width: 400px;
+                background: $rouge;
+                transform: rotate(25deg);
+            }
+        
+            &::after {
+                position: absolute;
+                content: "";
+                bottom: -80px;
+                right: -100px;
+                height: 200px;
+                width: 400px;
+                background: $bleu;
+                transform: rotate(-25deg);
+            }
+
+            .contact-header {
+                color: white;
+                position: absolute;
+                transform: rotate(-90deg);
+                top: 90px;
+                left: -50px;
+        
+                h2 {
+                font-size: 1.75rem;
+                }
+            }
+
+            .social-bar {
+                position: absolute;
+                bottom: 19px;
+                left: 0px;
+                right: 0px;
+                margin: 0 auto;
+                z-index: 1;
+                width: 250px;
+            
+                ul {
+                    list-style-type: none;
+                
+                    li {
+                        display: inline-block;
+                        color: white;
+                        width: 45px;
+                        height: 45px;
+                        line-height: 45px;
+                        text-align: center;
+                        margin-right: -4px;
+
+                        i{
+                            font-size: 2.5rem;
+                        }
+                    }
+                }
+            }
+        }
+
+        .header {
+            text-align: center;
+            padding: 10px 0;
+        
+            h2 {
+                font-family: 'Raleway';
+                color: #444;
+                margin: 0;
+                font-weight: 300;
+            }
+        }
+
+        .address, .email, .phone, .network {
+            text-align: center;
+            padding: 20px 0;
+            color: #444;
+      
+            h3, a {
+                font-size: 1.6rem;
+                font-weight: 500;
+                color: #444;
+            }
+    
+            i {
+                color: $rouge;
+                font-size: 2.5rem;
+                margin-bottom: 10px;
+            }
+        }
+
+        .network{
+            display: none;
+
+            .net-flex{
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                i{
+                    color: #444;
+                    font-size: 2rem;
+                    padding: 20px 0;
+                    margin: 0 2.5rem;
+                }
+            }
+        }
+
+        .email{
+            padding: 20px 20px;
+        }
+
+        .contact-form {
+            padding-bottom: 40px;
+            
+            form {
+                position: relative;
+                max-width: 440px;
+                margin: 0 auto;
+                padding: 20px;
+                box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+                background: white;
+        
+                input, textarea {
+                    background: white;
+                    display: block;
+                    margin: 0 auto 20px;
+                    width: 100%;
+                    line-height: 40px;
+                    border: 0;
+                    color: black;
+                    font-family: 'Roboto', sans-serif;
+                }
+        
+                input {
+                    height: 40px;
+                    outline: 0;
+                    border-bottom: 1px solid rgba(68, 68, 68, 0.3);
+                    font-size: 1.6rem;
+                }
+        
+                textarea {
+                    border-bottom: 1px solid rgba(68, 68, 68, 0.3);
+                    resize: none;
+                    outline: none;
+                    font-size: 1.6rem;
+                }
+                
+                .bouton-contact{
+                    margin-top: 1.5rem;
+                    text-align: center;
+                    position: absolute;
+                    display: block;
+                    height: 40px;
+                    width: 250px;
+                    left: 0px;
+                    right: 0px;
+                    margin: 0 auto;
+                    border: 0;
+                    bottom: -20px;
+                    color: white;
+                    font-size: 1.1rem;
+                    font-weight: 300;
+                    outline: none;
+        
+                    .btn{
+                        font-size: 2rem;
+                        padding: 1rem 0.75rem;
+                        height: 40px;
+                        width: 250px;
+                        background-color: $rouge;
+                        border-radius: 20px;                        
+                        border: 1px solid white;
+                        letter-spacing: 0.1em;
+                        cursor: pointer;
+                        font-weight: 400;
+                        line-height: 45px;
+                        max-width: 160px;
+                        position: relative;
+                        text-decoration: none;
+                        text-transform: uppercase;
+                        --uismLinkDisplay: var(--smLinkDisplay, inline-flex);
+                        display: var(--uismLinkDisplay);
+                        color: #000;
+                        transition-duration: 0.4s;
+                        overflow: hidden;
+        
+                        &:hover {
+                            text-decoration: none;
+                        }
+                    }
+                    
+                    i{
+                        border: none;
+                    }     
+        
+                    .btn::before,
+                    .btn i{
+                        margin: 0 auto;
+                        transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
+                        transition-duration: 0.4s;
+                    }
+                      
+                    
+                    .btn:hover{              
+                        background-color: #fff;
+                        border: 3px solid $bleu;
+                    }
+                      
+                    .btn:hover i{
+                        -webkit-transform: translateY(-400%) scale(-0.1,20);
+                                transform: translateY(-400%) scale(-0.1,20);
+                                display: none;
+                    }
+                      
+                    .btn::before{
+                        content: "SEND";
+                            color: $bleu;
+                        font-weight: 800;
+                        position: absolute;
+                        left: 0;
+                        right: 0;
+                        top: -3px;
+                        bottom: 0;
+                        margin: auto;
+                        -webkit-transform: translateY(500%) scale(-0.1,20);
+                                transform: translateY(500%) scale(-0.1,20);
+                    }
+                      
+                    
+                    .btn:hover::before{
+                        letter-spacing: 0.05em;
+                        -webkit-transform: translateY(0) scale(1,1);
+                                transform: translateY(0) scale(1,1);
+                    }
+                }
+            }
+        }  
+    }
+
+
+    /* Layout Stuff */
+    .contact-form-container {
+    max-width: 800px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 0.5fr 0.5fr 2fr;
+    grid-template-areas: "contact-me header header header" "contact-me address email email" "contact-me contact-form contact-form contact-form";
+    box-shadow: 0 .5rem 1rem rgba(255, 255, 255, 0.25)!important;
+    }
+
+    .contact-me {
+    grid-area: contact-me;
+    }
+
+    .header {
+    grid-area: header;
+    }
+
+    .address {
+    grid-area: address;
+    }
+
+    .email {
+    grid-area: email;
+    }
+
+    .network {
+        grid-area: network;
+    }
+
+    .contact-form {
+    grid-area: contact-form;
+    }
+
+    @include sm {
+        .contact-me {
+            display: none;
+        }        
+        .network{
+            display: inline-block !important;
+            .net-flex{
+                i{
+                    font-size: 2rem;
+                    padding-top: 1rem !important;
+                    margin: 0 1rem !important;
+                }
+            }
+        }
+        .contact-form-container {
+            margin: 5rem auto;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: 0.5fr 0.5fr 2fr;
+            grid-template-areas: "header header header" "address network email" "contact-form contact-form contact-form";
+        }
+    }
+
+    @include xs {
+        .network{
+            display: inline-block !important;
+        }
+        .address, .email, .phone, .network {
+            padding: 5px 0 !important;
+        }
+        .contact-form-container {
+            margin: auto;
+            display: grid;
+            grid-template-columns: 1fr;
+            grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr 2fr;
+            grid-template-areas: "header" "address" "email" "network" "contact-form";
         }
     }
 }
