--- a/css/_equalizer.scss
+++ b/css/_equalizer.scss
@@ -39,6 +39,7 @@ $animation-name: 'pump-it-up';
     width: 100%;
     height: 100%;
     padding-top: 50px;
+    margin-top: 3rem;
 
     #levels {
         width: 200px;
@@ -60,7 +61,7 @@ $animation-name: 'pump-it-up';
                 position: absolute;
                 bottom: 0;
                 left: 0;
-                background: #FFF;
+                background: #FBCE41;
                 width: 3px;                
             }
 
