--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -8,9 +8,9 @@
 
 /* VARIABLES COLORS */
 $sable: #7D936F;
-$rouge: #ff4655;
+$rouge: #fc7420;
 $violet: #2E2F63;
-$bleu: #2085FC;
+$bleu: #13c9d7;
 $gris: #151615;
 $background: #18191A;
 
@@ -44,6 +44,8 @@ h1,h2,h3,h4,h5,h6{
     font-size: 100%;
     font-weight: 700;
     margin: 1rem 0;
+    display: block;
+    text-align: center;
 }
 
 h1{
@@ -128,6 +130,7 @@ td:not([align]),th:not([align]){
 ::placeholder {
     font-style: italic;
     font-weight: 300;
+    font-family: 'Roboto', sans-serif;
 }
 
 .container{
@@ -135,7 +138,6 @@ td:not([align]),th:not([align]){
 }
 
 section{
-    padding-top: 125px;
     text-align: center;
     width: 100%;
 }
@@ -149,6 +151,25 @@ section{
     section{
         padding-top: 50px;
     }
+}
+
+
+/* SCROLLBAR */@at-root/* Scroll-Bar */
+::-webkit-scrollbar {
+    width: 1.25rem;
+}
+  
+::-webkit-scrollbar-track {
+    background: #f5f5f5; 
+}
+
+::-webkit-scrollbar-thumb {
+    background:#fc7420; 
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #fc7420;
 }
 
 
