--- a/css/_about.scss
+++ b/css/_about.scss
@@ -25,27 +25,31 @@
             margin: 0;
         }
         h3{
-            font-size: 2rem;
+            font-size: 2.2rem;
             text-align: center;
             color: black;
+
+            em{
+                font-size: 1.8rem;
+                text-align: center;
+                color: black;
+            }
         }
         h4{
             font-size: 2rem;
             font-style: italic;
             color: black;
         }
-        li{
+        p{
             font-size: 1.8rem;
-            list-style: inside square;
-            padding-left: 2rem;
-            color: $background;
-        }
-        a{
-            font-size: 1.8rem;
+            line-height: 2rem;
+            word-spacing: 4px;
             color: black;
+            margin-bottom: 2rem;
         }
         i{
             color: #3C3C3C;
+            font-size: 2rem;
             margin: 2rem;
         }
     }
