--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -5,17 +5,20 @@ footer{
         a{
             text-align: center;
             padding: 1rem 0.5rem;
+            &:hover{
+                color: $bleu;
+            }
         }
         i{
             &:hover{
-                color: #0056b3;
+                color: $bleu;
             }
         }
     }
 }
 
 .copyright{
-    margin-top: 3rem;
+    margin-top: 2rem;
     
     p{
         text-align: center;
@@ -39,19 +42,4 @@ footer{
         border-radius: 10%;
         margin-left: 0.5rem;
     }
-}
-
-.tooltip {
-    font-family: "Montserrat", Helvetica, Arial, sans-serif;
-    font-size: 1.6rem;
-    font-style: normal;
-    font-weight: 500;
-    text-align: center;
-  }
-.tooltip .tooltip-inner {
-    max-width: 250px;
-    color: #fff;
-    text-align: center;
-    background-color: #000;
-    border-radius: 4px;
 }
