--- a/css/_reset.scss
+++ b/css/_reset.scss
@@ -153,6 +153,21 @@ section{
     }
 }
 
+/*TOOLTIP */
+.tooltip {
+    font-family: "Montserrat", Helvetica, Arial, sans-serif;
+    font-size: 1.6rem;
+    font-style: normal;
+    font-weight: 500;
+    text-align: center;
+  }
+.tooltip .tooltip-inner {
+    max-width: 250px;
+    color: #fff;
+    text-align: center;
+    background-color: #000;
+    border-radius: 4px;
+}
 
 /* SCROLLBAR */@at-root/* Scroll-Bar */
 ::-webkit-scrollbar {
