--- a/css/index.css
+++ b/css/index.css
@@ -922,7 +922,7 @@ nav {
 
 #home .title {
   text-align: start;
-  width: 33%;
+  width: 40%;
   z-index: 999;
 }
 
@@ -938,7 +938,11 @@ nav {
   height: 2px;
   width: auto;
   background-color: white;
-  margin: 3rem 1rem;
+  margin: 3rem 3rem;
+}
+
+#home .title .description {
+  margin: 0 2rem;
 }
 
 #home .title .description p {
@@ -1089,7 +1093,7 @@ nav {
 }
 
 #home .video {
-  width: 66%;
+  width: 60%;
   margin-top: 6rem;
   margin-left: 2rem;
   z-index: 999;
@@ -1442,16 +1446,16 @@ nav {
   20% {
   }
   40% {
-    height: 12px;
+    height: 13px;
   }
   60% {
-    height: 42px;
+    height: 33px;
   }
   80% {
-    height: 16px;
+    height: 47px;
   }
   100% {
-    height: 12px;
+    height: 18px;
   }
 }
 
@@ -1459,16 +1463,16 @@ nav {
   20% {
   }
   40% {
-    height: 23px;
+    height: 10px;
   }
   60% {
-    height: 46px;
+    height: 28px;
   }
   80% {
-    height: 45px;
+    height: 26px;
   }
   100% {
-    height: 26px;
+    height: 33px;
   }
 }
 
@@ -1476,16 +1480,16 @@ nav {
   20% {
   }
   40% {
-    height: 29px;
+    height: 30px;
   }
   60% {
-    height: 6px;
+    height: 35px;
   }
   80% {
-    height: 33px;
+    height: 4px;
   }
   100% {
-    height: 39px;
+    height: 12px;
   }
 }
 
@@ -1493,13 +1497,13 @@ nav {
   20% {
   }
   40% {
-    height: 43px;
+    height: 16px;
   }
   60% {
-    height: 38px;
+    height: 44px;
   }
   80% {
-    height: 14px;
+    height: 49px;
   }
   100% {
     height: 32px;
@@ -1510,16 +1514,16 @@ nav {
   20% {
   }
   40% {
-    height: 8px;
+    height: 40px;
   }
   60% {
-    height: 12px;
+    height: 1px;
   }
   80% {
-    height: 45px;
+    height: 1px;
   }
   100% {
-    height: 35px;
+    height: 37px;
   }
 }
 
@@ -1527,16 +1531,16 @@ nav {
   20% {
   }
   40% {
-    height: 9px;
+    height: 47px;
   }
   60% {
-    height: 49px;
+    height: 13px;
   }
   80% {
-    height: 27px;
+    height: 12px;
   }
   100% {
-    height: 45px;
+    height: 19px;
   }
 }
 
@@ -1544,16 +1548,16 @@ nav {
   20% {
   }
   40% {
-    height: 26px;
+    height: 49px;
   }
   60% {
-    height: 37px;
+    height: 31px;
   }
   80% {
-    height: 36px;
+    height: 26px;
   }
   100% {
-    height: 10px;
+    height: 7px;
   }
 }
 
@@ -1561,16 +1565,16 @@ nav {
   20% {
   }
   40% {
-    height: 4px;
+    height: 22px;
   }
   60% {
-    height: 45px;
+    height: 20px;
   }
   80% {
-    height: 29px;
+    height: 39px;
   }
   100% {
-    height: 23px;
+    height: 16px;
   }
 }
 
@@ -1578,16 +1582,16 @@ nav {
   20% {
   }
   40% {
-    height: 15px;
+    height: 34px;
   }
   60% {
-    height: 15px;
+    height: 34px;
   }
   80% {
-    height: 12px;
+    height: 21px;
   }
   100% {
-    height: 17px;
+    height: 5px;
   }
 }
 
@@ -1598,13 +1602,13 @@ nav {
     height: 49px;
   }
   60% {
-    height: 7px;
+    height: 36px;
   }
   80% {
-    height: 42px;
+    height: 26px;
   }
   100% {
-    height: 34px;
+    height: 12px;
   }
 }
 
@@ -1612,16 +1616,16 @@ nav {
   20% {
   }
   40% {
-    height: 14px;
+    height: 44px;
   }
   60% {
-    height: 13px;
+    height: 37px;
   }
   80% {
-    height: 19px;
+    height: 15px;
   }
   100% {
-    height: 11px;
+    height: 8px;
   }
 }
 
@@ -1629,16 +1633,16 @@ nav {
   20% {
   }
   40% {
-    height: 50px;
+    height: 22px;
   }
   60% {
-    height: 28px;
+    height: 6px;
   }
   80% {
-    height: 38px;
+    height: 37px;
   }
   100% {
-    height: 40px;
+    height: 5px;
   }
 }
 
@@ -1646,16 +1650,16 @@ nav {
   20% {
   }
   40% {
-    height: 40px;
+    height: 3px;
   }
   60% {
-    height: 22px;
+    height: 14px;
   }
   80% {
-    height: 4px;
+    height: 17px;
   }
   100% {
-    height: 24px;
+    height: 16px;
   }
 }
 
@@ -1663,13 +1667,13 @@ nav {
   20% {
   }
   40% {
-    height: 4px;
+    height: 23px;
   }
   60% {
-    height: 33px;
+    height: 16px;
   }
   80% {
-    height: 26px;
+    height: 38px;
   }
   100% {
     height: 13px;
@@ -1680,16 +1684,16 @@ nav {
   20% {
   }
   40% {
-    height: 24px;
+    height: 33px;
   }
   60% {
     height: 47px;
   }
   80% {
-    height: 13px;
+    height: 17px;
   }
   100% {
-    height: 21px;
+    height: 29px;
   }
 }
 
@@ -1697,16 +1701,16 @@ nav {
   20% {
   }
   40% {
-    height: 7px;
+    height: 24px;
   }
   60% {
-    height: 18px;
+    height: 4px;
   }
   80% {
-    height: 11px;
+    height: 48px;
   }
   100% {
-    height: 36px;
+    height: 16px;
   }
 }
 
@@ -1714,16 +1718,16 @@ nav {
   20% {
   }
   40% {
-    height: 34px;
+    height: 50px;
   }
   60% {
-    height: 49px;
+    height: 33px;
   }
   80% {
-    height: 10px;
+    height: 15px;
   }
   100% {
-    height: 21px;
+    height: 37px;
   }
 }
 
@@ -1731,16 +1735,16 @@ nav {
   20% {
   }
   40% {
-    height: 24px;
+    height: 8px;
   }
   60% {
-    height: 11px;
+    height: 21px;
   }
   80% {
-    height: 9px;
+    height: 3px;
   }
   100% {
-    height: 5px;
+    height: 24px;
   }
 }
 
@@ -1748,16 +1752,16 @@ nav {
   20% {
   }
   40% {
-    height: 7px;
+    height: 26px;
   }
   60% {
-    height: 26px;
+    height: 19px;
   }
   80% {
     height: 26px;
   }
   100% {
-    height: 22px;
+    height: 21px;
   }
 }
 
@@ -1765,16 +1769,16 @@ nav {
   20% {
   }
   40% {
-    height: 43px;
+    height: 47px;
   }
   60% {
-    height: 9px;
+    height: 45px;
   }
   80% {
-    height: 21px;
+    height: 45px;
   }
   100% {
-    height: 47px;
+    height: 13px;
   }
 }
 
@@ -1813,63 +1817,63 @@ nav {
 }
 
 #equalizer #levels .level.level1:after {
-  height: 34px;
-  -webkit-animation: pump-it-up1 5058ms linear infinite alternate;
-          animation: pump-it-up1 5058ms linear infinite alternate;
+  height: 14px;
+  -webkit-animation: pump-it-up1 4899ms linear infinite alternate;
+          animation: pump-it-up1 4899ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level2:after {
-  height: 4px;
-  -webkit-animation: pump-it-up2 2855ms linear infinite alternate;
-          animation: pump-it-up2 2855ms linear infinite alternate;
+  height: 14px;
+  -webkit-animation: pump-it-up2 6410ms linear infinite alternate;
+          animation: pump-it-up2 6410ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level3:after {
-  height: 26px;
-  -webkit-animation: pump-it-up3 2144ms linear infinite alternate;
-          animation: pump-it-up3 2144ms linear infinite alternate;
+  height: 13px;
+  -webkit-animation: pump-it-up3 2036ms linear infinite alternate;
+          animation: pump-it-up3 2036ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level4:after {
-  height: 28px;
-  -webkit-animation: pump-it-up4 4934ms linear infinite alternate;
-          animation: pump-it-up4 4934ms linear infinite alternate;
+  height: 7px;
+  -webkit-animation: pump-it-up4 3514ms linear infinite alternate;
+          animation: pump-it-up4 3514ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level5:after {
-  height: 3px;
-  -webkit-animation: pump-it-up5 6973ms linear infinite alternate;
-          animation: pump-it-up5 6973ms linear infinite alternate;
+  height: 30px;
+  -webkit-animation: pump-it-up5 3865ms linear infinite alternate;
+          animation: pump-it-up5 3865ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level6:after {
-  height: 48px;
-  -webkit-animation: pump-it-up6 2824ms linear infinite alternate;
-          animation: pump-it-up6 2824ms linear infinite alternate;
+  height: 8px;
+  -webkit-animation: pump-it-up6 3640ms linear infinite alternate;
+          animation: pump-it-up6 3640ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level7:after {
-  height: 18px;
-  -webkit-animation: pump-it-up7 6476ms linear infinite alternate;
-          animation: pump-it-up7 6476ms linear infinite alternate;
+  height: 46px;
+  -webkit-animation: pump-it-up7 4376ms linear infinite alternate;
+          animation: pump-it-up7 4376ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level8:after {
-  height: 34px;
-  -webkit-animation: pump-it-up8 6959ms linear infinite alternate;
-          animation: pump-it-up8 6959ms linear infinite alternate;
+  height: 29px;
+  -webkit-animation: pump-it-up8 6922ms linear infinite alternate;
+          animation: pump-it-up8 6922ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level9:after {
-  height: 32px;
-  -webkit-animation: pump-it-up9 2315ms linear infinite alternate;
-          animation: pump-it-up9 2315ms linear infinite alternate;
+  height: 48px;
+  -webkit-animation: pump-it-up9 4448ms linear infinite alternate;
+          animation: pump-it-up9 4448ms linear infinite alternate;
 }
 
 #equalizer #levels .level.level10:after {
-  height: 8px;
-  -webkit-animation: pump-it-up10 6868ms linear infinite alternate;
-          animation: pump-it-up10 6868ms linear infinite alternate;
+  height: 12px;
+  -webkit-animation: pump-it-up10 3115ms linear infinite alternate;
+          animation: pump-it-up10 3115ms linear infinite alternate;
 }
 
 #contact {
